--- a/style.css
+++ b/style.css
@@ -33,4 +33,15 @@ section:nth-of-type(odd) {
 section:nth-of-type(even) {
   background: lightpink;
 }
+
+#arrow {
+  background-image: url(./arrow.png);
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 2;
+  cursor: pointer;
+}
 /*# sourceMappingURL=style.css.map */
