--- a/style.scss
+++ b/style.scss
@@ -30,3 +30,15 @@ section {
         background: lightpink;
     }
 }
+
+// 箭頭樣式
+#arrow {
+    background-image: url(./arrow.png);
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    z-index: 2;
+    cursor: pointer;
+}
